# oratium

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  LICENSE  MVP_SCOPE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/multi_tenant/: README.md  main.py  tenants.example.yaml  tenants.yaml
examples/quickstart/: README.md  main.py
examples/with_mcp/: README.md  main.py  tools.py
oratium/: __init__.py  agent.py  app.py  config.py  tenant.py
oratium/secrets/: __init__.py  fernet.py
oratium/storage/: __init__.py  _sql_base.py  _sql_models.py  base.py  postgres.py  sessions.py  sqlite.py  yaml_store.py
oratium/storage/migrations/: env.py
oratium/storage/migrations/versions/: 0001_create_tenants.py  0002_add_secrets_column.py
oratium/tools/: __init__.py  data_tables.py  functions.py  knowledge.py  mcp.py  unified.py
oratium/transport/: __init__.py  twilio.py
tests/: test_agent.py  test_app.py  test_app_multi_tenant.py  test_config.py  test_data_tables.py  test_fernet.py  test_function_resolver.py  test_knowledge.py  test_mcp.py  test_postgres_store_unit.py  test_sessions.py  test_smoke.py  test_sqlite_store.py  test_tenant.py  test_twilio_transport.py  test_unified_tools.py  test_yaml_store.py
