[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oratium"
version = "0.0.1"
description = "Production-grade, multi-tenant, MCP-native voice agent framework built on the OpenAI Agents SDK. Pluggable everything."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Samar Batra" },
]
keywords = [
    "voice-agent",
    "voice-ai",
    "openai",
    "openai-agents",
    "twilio",
    "realtime",
    "mcp",
    "fastapi",
    "telephony",
    "multi-tenant",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai-agents[voice]>=0.14.0,<1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "cryptography>=43.0.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/samarbatra23/oratium"
Repository = "https://github.com/samarbatra23/oratium"
Issues = "https://github.com/samarbatra23/oratium/issues"

[tool.hatch.build.targets.wheel]
packages = ["oratium"]

[tool.hatch.build.targets.sdist]
include = [
    "/oratium",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

# --- Lint ---

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "PT",   # pytest-style
    "PTH",  # use pathlib
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
"examples/**/*.py" = ["E402"]

# --- Format ---

[tool.black]
line-length = 100
target-version = ["py311"]

# --- Type check ---

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["agents.*", "agents"]
ignore_missing_imports = true

# --- Test ---

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: end-to-end tests requiring external services",
]

# --- Coverage ---

[tool.coverage.run]
source = ["oratium"]
branch = true
omit = [
    "tests/*",
    "examples/*",
    "docker/*",
    "docs/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
